Fixed table header alignment

--- a/tobias/tobiasfyi/static/sass/tobiasfyi.scss
+++ b/tobias/tobiasfyi/static/sass/tobiasfyi.scss
@@ -184,6 +184,7 @@
         th, td {
           border: 1px solid $dark;
           padding: 0.1rem;
+          text-align: center;
         }
         caption {
           padding: 0.2rem;
